--- a/package.json
+++ b/package.json
@@ -9,16 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
+    "ethers": "^6.9.0",
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "8.0.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-root-import": "6.6.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-tss-unused-classes": "0.0.4",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.3",
+    "prettier": "3.0.0",
+    "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "yarn lint:fix",
+      "eslint --cache --fix"
+    ]
+  },
+  "volta": {
+    "node": "18.17.1",
+    "yarn": "1.19.2"
   }
 }
