--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.0",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "ethers": "^6.9.0",
     "next": "14.0.4",
     "react": "^18",
