--- a/package.json
+++ b/package.json
@@ -6,20 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@metamask/detect-provider": "^2.0.0",
+    "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.0",
+    "@types/jest": "^29.5.11",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
-    "ethers": "^6.9.0",
+    "@web3-react/core": "^8.2.3",
+    "date-fns": "^3.0.6",
+    "ethers": "^6.9.1",
+    "eventemitter3": "^5.0.1",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-typescript": "^7.23.3",
     "@svgr/webpack": "8.0.1",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20",
@@ -27,6 +40,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "babel-eslint": "10.1.0",
+    "babel-jest": "^29.7.0",
     "babel-plugin-root-import": "6.6.0",
     "eslint": "^8",
     "eslint-config-airbnb": "19.0.4",
@@ -41,8 +55,10 @@
     "eslint-plugin-tss-unused-classes": "0.0.4",
     "eslint-plugin-unused-imports": "3.0.0",
     "husky": "8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "13.2.3",
     "prettier": "3.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
   },
   "lint-staged": {
